--- a/index.html
+++ b/index.html
@@ -5,25 +5,29 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f7f7f7;
+      background-image: url('https://link-a-tu-imagen.jpg');
+      background-size: cover;
+      background-position: center;
       text-align: center;
       padding-top: 100px;
     }
 
     h1 {
-      color: #333;
+      color: #fff;
     }
 
     .countdown {
       font-size: 60px;
       margin-top: 40px;
-      color: #333;
+      color: #fff;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
 
     .message {
       font-size: 30px;
       margin-top: 20px;
-      color: #666;
+      color: #fff;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
   </style>
 </head>
