--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image: url('https://link-a-tu-imagen.jpg');
+      background-image: url('<img src="https://hips.hearstapps.com/hmg-prod/images/beautiful-tropical-sunset-scenery-two-sun-beds-royalty-free-image-1595368231.jpg" alt="30+ Best End of Summer Quotes - Beautiful Quotes About the Last Days of  Summer"/>');
       background-size: cover;
       background-position: center;
       text-align: center;
