--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image: url('<img src="https://hips.hearstapps.com/hmg-prod/images/beautiful-tropical-sunset-scenery-two-sun-beds-royalty-free-image-1595368231.jpg" alt="30+ Best End of Summer Quotes - Beautiful Quotes About the Last Days of  Summer"/>');
+      background-image: url('https://drive.google.com/file/d/1Revyq65AsvLvC7QNtSG078n-uhztB-aL/view?usp=sharing');
       background-size: cover;
       background-position: center;
       text-align: center;
