--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image: url('https://drive.google.com/file/d/1Revyq65AsvLvC7QNtSG078n-uhztB-aL/view?usp=sharing');
+      background-image: url('https://imgur.com/a/JsnmxAe');
       background-size: cover;
       background-position: center;
       text-align: center;
@@ -62,7 +62,4 @@
         clearInterval(countdown);
         document.getElementById('countdown').innerHTML = '¡El verano está aquí!';
       }
-    }, 1000);
-  </script>
-</body>
-</html>
+   
