--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image: url('https://imgur.com/a/JsnmxAe');
+      background-image: url('summer.wall.jpg');
       background-size: cover;
       background-position: center;
       text-align: center;
@@ -62,4 +62,7 @@
         clearInterval(countdown);
         document.getElementById('countdown').innerHTML = '¡El verano está aquí!';
       }
-   
+    }, 1000);
+  </script>
+</body>
+</html>
