--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       color: #fff;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
+
+    .video-container {
+      margin-top: 40px;
+    }
   </style>
 </head>
 <body>
@@ -36,11 +40,15 @@
   <div class="countdown" id="countdown"></div>
   <div class="message">¡El verano está llegando pronto!</div>
 
+  <div class="video-container">
+    <iframe id="youtube-video" width="560" height="315" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
+
   <script>
     // Establecer la fecha objetivo (21 de junio)
     var targetDate = new Date('June 21, 2023 00:00:00').getTime();
 
-    // Actualizar la cuenta regresiva cada segundo
+    // Actualizar la cuenta regresiva y el video cada segundo
     var countdown = setInterval(function() {
       // Obtener la fecha y hora actual
       var now = new Date().getTime();
@@ -62,7 +70,32 @@
         clearInterval(countdown);
         document.getElementById('countdown').innerHTML = '¡El verano está aquí!';
       }
+
+      // Cambiar el video cada 24 horas
+      var hoursPassed = Math.floor((now - targetDate) / (1000 * 60 * 60));
+      if (hoursPassed % 24 === 0) {
+        changeVideo();
+      }
     }, 1000);
+
+    // Cambiar el video de YouTube
+    function changeVideo() {
+      // Lista de URLs de videos de YouTube
+      var videoUrls = [
+        'https://www.youtube.com/watch?v=Il6_5eoRMCc',
+        'https://www.youtube.com/watch?v=6-h9N3D3v-Y',
+        'https://www.youtube.com/watch?v=U8QTUfFHyAk'
+      ];
+
+      // Obtener un índice aleatorio para seleccionar un video de la lista
+      var randomIndex = Math.floor(Math.random() * videoUrls.length);
+
+      // Obtener el elemento del video de YouTube
+      var youtubeVideo = document.getElementById('youtube-video');
+
+      // Actualizar la URL del video
+      youtubeVideo.src = videoUrls[randomIndex];
+    }
   </script>
 </body>
 </html>
