--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <div class="video-container">
     <video id="local-video" controls>
-      <source src="nombre_del_video.mp4" type="video/mp4">
+      <source src="video.mp4" type="video/mp4">
       Tu navegador no admite el elemento de video.
     </video>
   </div>
