--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <div class="video-container">
     <h2>Canción del Verano</h2>
-    <video id="local-video" autoplay loop>
+    <video id="local-video" controls>
       <source src="video.mp4" type="video/mp4">
       Tu navegador no admite el elemento de video.
     </video>
