--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       background-position: center;
       text-align: center;
       padding-top: 100px;
+      overflow: hidden;
     }
 
     h1 {
@@ -56,12 +57,37 @@
       font-size: 14px;
       color: #777;
       margin-top: 20px;
+      background-color: #fff;
+      padding: 10px;
     }
 
     .rights-reserved {
       font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
       font-weight: bold;
       font-size: 16px;
+      margin: 0;
+    }
+
+    /* Estilos para las serpentinas */
+    .confetti {
+      width: 10px;
+      height: 10px;
+      background-color: #ffef94;
+      position: absolute;
+      top: -10px;
+      animation: confetti-fall linear infinite;
+    }
+
+    /* Animación para que las serpentinas caigan */
+    @keyframes confetti-fall {
+      0% {
+        transform: translateY(-200px) rotate(0deg);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(100vh) rotate(1080deg);
+        opacity: 0;
+      }
     }
   </style>
 </head>
@@ -79,7 +105,7 @@
   </div>
 
   <footer>
-    <p class="rights-reserved">&copy; 2023. Todos los derechos reservados.</p>
+    <p class="rights-reserved" style="background-color: #fff;">&copy; 2023. Todos los derechos reservados.</p>
   </footer>
 
   <script>
@@ -109,6 +135,25 @@
         document.getElementById('countdown').innerHTML = '¡El verano está aquí!';
       }
     }, 1000);
+
+    // Crear serpentinas cada 100ms
+    setInterval(function() {
+      createConfetti();
+    }, 100);
+
+    // Crear una serpentina en una posición y velocidad aleatorias
+    function createConfetti() {
+      var confetti = document.createElement('div');
+      confetti.className = 'confetti';
+      confetti.style.left = Math.random() * 100 + '%';
+      confetti.style.animationDuration = Math.random() * 3 + 2 + 's';
+      document.body.appendChild(confetti);
+
+      // Eliminar la serpentina después de que haya caído
+      confetti.addEventListener('animationend', function() {
+        confetti.parentNode.removeChild(confetti);
+      });
+    }
   </script>
 </body>
 </html>
