--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       background-position: center;
       text-align: center;
       padding-top: 100px;
-      overflow: hidden;
     }
 
     h1 {
@@ -57,7 +56,6 @@
       font-size: 14px;
       color: #777;
       margin-top: 20px;
-      background-color: #fff;
       padding: 10px;
     }
 
@@ -66,6 +64,9 @@
       font-weight: bold;
       font-size: 16px;
       margin: 0;
+      background-color: #fff;
+      display: inline-block;
+      padding: 5px 10px;
     }
 
     /* Estilos para las serpentinas */
@@ -105,7 +106,7 @@
   </div>
 
   <footer>
-    <p class="rights-reserved" style="background-color: #fff;">&copy; 2023. Todos los derechos reservados.</p>
+    <p class="rights-reserved">&copy; 2023. Todos los derechos reservados.</p>
   </footer>
 
   <script>
