--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
     .video-container video {
       width: 560px;
       height: 315px;
+      background-color: #000;
     }
 
     .video-title {
       position: absolute;
-      top: 0;
+      top: -40px;
       left: 0;
       right: 0;
       margin: auto;
