--- a/index.html
+++ b/index.html
@@ -64,11 +64,6 @@
       font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
       font-weight: bold;
     }
-
-    /* Estilos para ocultar los controles del video */
-    video {
-      outline: none;
-    }
   </style>
 </head>
 <body>
@@ -83,6 +78,8 @@
     </video>
     <h2 class="video-title">Canción del Verano</h2>
   </div>
+
+  <audio src="musica.mp3" autoplay loop></audio>
 
   <footer>
     <p class="rights-reserved">© 2023. Todos los derechos reservados.</p>
