--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       background-position: center;
       text-align: center;
       padding-top: 100px;
+      overflow: hidden; /* Evitar que el confeti se desborde */
     }
 
     h1 {
@@ -64,27 +65,8 @@
       font-weight: bold;
       font-size: 16px;
     }
-
-    /* Estilos para las serpentinas */
-    .sun-confetti {
-      width: 20px;
-      height: 20px;
-      position: absolute;
-      background: yellow;
-      border-radius: 50%;
-      animation: fall 8s infinite;
-      opacity: 0.8;
-    }
-
-    @keyframes fall {
-      0% {
-        transform: translateY(-100px);
-      }
-      100% {
-        transform: translateY(100vh);
-      }
-    }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/confetti-js/dist/index.min.js"></script>
 </head>
 <body>
   <h1>Summer Countdown</h1>
@@ -107,18 +89,6 @@
     <source src="musica.mp3" type="audio/mpeg">
     Tu navegador no admite el elemento de audio.
   </audio>
-
-  <!-- Serpentinas con forma de sol -->
-  <div class="sun-confetti"></div>
-  <div class="sun-confetti"></div>
-  <div class="sun-confetti"></div>
-  <div class="sun-confetti"></div>
-  <div class="sun-confetti"></div>
-  <div class="sun-confetti"></div>
-  <div class="sun-confetti"></div>
-  <div class="sun-confetti"></div>
-  <div class="sun-confetti"></div>
-  <div class="sun-confetti"></div>
 
   <script>
     // Establecer la fecha objetivo (21 de junio)
@@ -147,14 +117,17 @@
         document.getElementById('countdown').innerHTML = '¡El verano está aquí!';
       }
     }, 1000);
-  </script>
 
-  <script>
-    // Obtener el elemento de audio
-    var audio = document.getElementsByTagName('audio')[0];
-    
-    // Establecer el volumen al máximo
-    audio.volume = 1;
+    // Generar confeti con forma de sol
+    var confettiSettings = {
+      target: 'confetti-container',
+      max: 50, // Cambiar este valor para controlar la cantidad de confeti
+      size: 1,
+      rotate: true
+    };
+    var confetti = new ConfettiGenerator(confettiSettings);
+    confetti.render();
+
   </script>
 </body>
 </html>
