--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
       margin-top: 20px;
       background-color: #fff;
       padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
     }
 
     .rights-reserved {
